feature: realize lfsr

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,8 @@ PLAINTEXT=Your Secret Data
 ALFABET_POWER=1_114_111
 
 # Secret data for Automatic key selection cipher
-AKSC_KEY=Your Secret Char
+AKSC_KEY=Your Secret Char (example: G)
+
+# Secret data for LFSR
+INIT_STATE=Your initial state in binary representation (example: '0101')
+TAB_BITS=Your tab bits, separated with spaces (example: '0, 1, 2')
