--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@ ALFABET_POWER=1_114_111
 AKSC_KEY=Your Secret Char (example: G)
 
 # Secret data for LFSR
-INIT_STATE=Your initial state in binary representation (example: '0101')
+SEED=Your initial state in binary representation (example: '0101')
 TAB_BITS=Your tab bits, separated with spaces (example: '0, 1, 2')
