--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ AKSC_KEY=Your Secret Char (example: G)
 
 # Secret data for LFSR
 SEED=Your initial state in binary representation (example: '0101')
-TAB_BITS=Your tab bits, separated with spaces (example: '0, 1, 2')
+TAB_BITS=Your tab bits, separated with spaces (example: '0 1 2')
